--- a/src/lib/i18n/ja.json
+++ b/src/lib/i18n/ja.json
@@ -12,7 +12,21 @@
     "email": "メールアドレス",
     "password": "パスワード",
     "or": "または",
-    "showAll": "すべて表示"
+    "showAll": "すべて表示",
+    "share": "共有",
+    "loading": "読み込み中... ",
+    "error": "エラーが発生しました"
+  },
+  "accessibility": {
+    "skipToMain": "メインコンテンツにジャンプ",
+    "settings": "アクセシビリティ設定",
+    "menu": "アクセシビリティメニュー",
+    "highContrast": "高コントラスト",
+    "screenReader": "スクリーンリーダー",
+    "keyboardNav": "キーボードナビゲーション",
+    "voiceMessages": "音声メッセージ",
+    "enabled": "有効",
+    "disabled": "無効"
   },
   "auth": {
     "login": "ログイン",
@@ -27,7 +41,22 @@
     "loginWithFacebook": "Facebookで続ける",
     "loginWithApple": "Appleで続ける",
     "noAccount": "アカウントをお持ちでないですか？",
-    "forgotPassword": "パスワードをお忘れですか？"
+    "forgotPassword": "パスワードをお忘れですか？",
+    "invalidEmail": "メールアドレスの形式が正しくありません",
+    "passwordTooShort": "パスワードは少なくとも6文字必要です",
+    "genericError": "エラーが発生しました",
+    "loginSuccess": "ログイン成功",
+    "registerSuccess": "登録成功",
+    "logoutSuccess": "ログアウト成功",
+    "emailAlreadyUsed": "このメールアドレスはすでに使用されています",
+    "emailNotFound": "このメールアドレスは存在しません",
+    "invalidPassword": "パスワードが正しくありません",
+    "emailRequired": "メールアドレスは必須です",
+    "passwordRequired": "パスワードは必須です",
+    "invalidCredentials": "無効な資格情報",
+    "emailOrPasswordRequired": "メールアドレスとパスワードは必須です",
+    "emailOrPasswordInvalid": "メールアドレスまたはパスワードが正しくありません",
+    "loading": "読み込み中... "
   },
   "player": {
     "play": "再生",
@@ -82,5 +111,42 @@
       "artist": "アーティスト",
       "album": "アルバム"
     }
+  },
+  "network": {
+    "offline": "オフラインです",
+    "syncing": "同期中...",
+    "pendingActions_1": "1 アクション保留中",
+    "pendingActions_other": "%d アクション保留中",
+    "update": "新しいバージョンが利用可能 - 更新"
+  },
+  "networkStatus": {
+    "title": "オフラインです",
+    "description": "インターネットに接続されていません。Spotifyにアクセスできません。"
+  },
+  "group": {
+    "type": "グループ",
+    "featured": "注目のグループ",
+    "new": "新しいグループ",
+    "recommended": "おすすめグループ",
+    "members": "メンバー{{count}}人",
+    "memberCount": "メンバー{{count}}人",
+    "join": "参加する",
+    "playlists": "グループのプレイリスト",
+    "discussions": "ディスカッション",
+    "replyCount": "{{count}}件の返信",
+    "role": {
+      "admin": "管理者",
+      "member": "メンバー"
+    }
+  },
+  "artist": {
+    "verified": "認証済みアーティスト",
+    "monthlyListeners": "月間リスナー",
+    "worldRank": "世界ランク",
+    "popular": "人気",
+    "discography": "ディスコグラフィー",
+    "tours": "ツアー",
+    "follow": "フォロー",
+    "tickets": "チケット"
   }
 }
